rust/macros/tests/ui/fail/string_literal_protocol.rs
use telltale_macros::choreography;

choreography!(r#"
protocol PingPong =
  roles Alice, Bob
  Alice -> Bob : Ping
  Bob -> Alice : Pong
"#);

fn main() {}
